[gd_scene load_steps=4 format=3 uid="uid://mvnljq0gkl80"]

[ext_resource type="Theme" uid="uid://cbwkyl6gws1s2" path="res://themes/text.tres" id="1_gdejx"]
[ext_resource type="Script" uid="uid://vkvdu8kc1s32" path="res://UI/load_button.gd" id="1_u6v1r"]
[ext_resource type="FontFile" uid="uid://b7b22c7x1x2mj" path="res://fonts/OpenMoji-color-sbix.ttf" id="3_1eov7"]

[node name="LoadButton" type="HBoxContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -38.5
offset_bottom = 38.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_u6v1r")

[node name="Load" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme = ExtResource("1_gdejx")
text = "save1"
clip_text = true

[node name="Delete" type="Button" parent="."]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("1_gdejx")
theme_override_fonts/font = ExtResource("3_1eov7")
text = " üóëÔ∏è "

[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
